--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,8 @@ Temporary Items
 .apdisk
 Temp
 Library
+.vs/Tic-tac-toe/v14/.suo
+Tic-tac-toe.csproj
+LearnTest
+.vs/Tic-tac-toe/v14/.suo
+Tic-tac-toe.csproj
