--- a/Tic-tac-toe.csproj
+++ b/Tic-tac-toe.csproj
@@ -112,9 +112,8 @@
     <Compile Include="Assets\Unity-Logs-Viewer\Reporter\Test\TestReporter.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Assets\Framework\Editor\UITemplate\C#_UI_Template.txt" />
-    <None Include="Assets\Framework\Editor\UITemplate\Lua_UI_Template.txt" />
-    <None Include="Assets\Framework\Editor\UITemplate\readme.txt" />
+    <None Include="Assets\Framework\Editor\Template\C#_UI_Template.txt" />
+    <None Include="Assets\Framework\Editor\Template\Lua_UI_Template.txt" />
     <None Include="Assets\LearnTest\PhotoToText\Text\bingbing.txt" />
     <None Include="Assets\LearnTest\PhotoToText\Text\chouxing.txt" />
     <None Include="Assets\LearnTest\PhotoToText\Text\fengzi.txt" />
