--- a/.gitignore
+++ b/.gitignore
@@ -55,5 +55,5 @@ APK/
 obj
 Debugger
 abTemp
-BundleToAssetsMap.txt.meta
-BundleToAssetsMap.txt
+bundle_to_assets_map.txt.meta
+bundle_to_assets_map.txt
